<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@drawable/bgrepeat" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="46.0sp" android:typeface="normal" android:textStyle="bold" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/text_flare_bear" android:fontFamily="casual" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:enabled="false" android:textSize="24.0sp" android:id="@id/buttonContinue" android:layout_width="250.0dip" android:layout_height="80.0dip" android:layout_marginBottom="24.0dip" android:text="@string/text_continue" android:onClick="continueGame" android:fontFamily="casual" app:layout_constraintBottom_toTopOf="@id/buttonNew" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textSize="24.0sp" android:id="@id/buttonNew" android:layout_width="250.0dip" android:layout_height="80.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="4.0dip" android:text="@string/text_new_flare_bear" android:onClick="newGame" android:fontFamily="casual" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:textSize="24.0sp" android:id="@id/button2" android:layout_width="wrap_content" android:layout_height="80.0dip" android:text="Help" android:onClick="showHelp" android:fontFamily="casual" />
        <Button android:textSize="24.0sp" android:id="@id/buttonCredits" android:layout_width="wrap_content" android:layout_height="80.0dip" android:layout_marginLeft="20.0dip" android:text="@string/text_credits" android:onClick="showCredits" android:fontFamily="casual" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>